# serverlooter

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: branches-push.yaml  main-push.yaml
docs/: game_design.md
locales/en-US/: algorithm.ftl  market.ftl  player_unlock.ftl  tutorial.ftl  ui.ftl
scripts/: build-wasm.sh  index.html.template  itch-upload.sh
src/: active_exploit.rs  executor.rs  inventory.rs  l10n.rs  macros.rs  main.rs  script.rs  server.rs
src/algorithm/: algorithm.rs  effect.rs  executor.rs  generator.rs  id.rs  mod.rs  procedure.rs
src/algorithm/effect/: application.rs  mod.rs  target.rs  value.rs
src/algorithm/procedure/: executor.rs  mod.rs
src/event/: exploit_event.rs  exploit_started.rs  mod.rs  modify_credits.rs  request_pause_exploit.rs  request_purchase_unlock.rs  request_restart_exploit.rs  request_resume_exploit.rs  request_start_exploit.rs  request_stop_exploit.rs  tutorial_data_dump_purchased.rs
src/inventory/: mod.rs  plugin.rs  systems.rs
src/inventory/event/: item_added.rs  item_removed.rs  mod.rs
src/l10n/: mod.rs
src/player/: mod.rs
src/player_state/: mod.rs  plugin.rs  state.rs  systems.rs  unlocks.rs
src/script/: builder.rs  executor.rs  id.rs  mod.rs
src/script/event/: mod.rs  script_created.rs
src/server/: mod.rs
src/tutorial/: mod.rs  plugin.rs  progression.rs  systems.rs
src/ui/: clock_speed.rs  instruction_count.rs  mixed_text.rs  mod.rs  plugin.rs  state.rs
src/ui/hover_text/: algorithm.rs  mod.rs  script.rs
src/ui/inventory/: grid_item.rs  mod.rs
src/ui/panel/: exploit.rs  market.rs  mod.rs  script.rs  server.rs
src/ui/window/: active_exploit.rs  mod.rs
