[package]
name = "serverlooter"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "=0.18.0", default-features = false, features = ["2d"] }
bevy_egui = { version = "=0.39.1", default-features = false, features = ["render", "default_fonts", "bevy_ui", "picking"] }
fluent-templates = "=0.13.2"
rand = "=0.10.0"
rand_distr = "=0.6.0"
unic-langid = "=0.9.6" # for use with fluent localization
uuid = { version = "=1.20.0", features = ["v4"] }
web-time = "=1.1.0"

[profile.wasm]
inherits = "release"
lto = true
codegen-units = 1

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "=0.4.1", default-features = false, features = ["wasm_js"] }
